parser/tests/bad/arr02-2.st
% upper bound of an 'array' must have type 'int'

var arr: array 1..2.0 of int
